--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <!-- Latest compiled and minified CSS & JS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <script src="http://code.jquery.com/jquery.js"></script>
+        <script type="text/javascript" src="js/vars.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script src="js/vendor/react.js"></script>
         <script src="js/vendor/react-dom.js"></script>
@@ -26,22 +27,22 @@
                 <a class="navbar-brand" href="#">LOGO</a>
                 <div class="myContainer">
                     <ul class="nav navbar-nav">
-                    <li>
+                    <li id="Project">
                         <a href="#">Project</a>
                     </li>
-                    <li>
+                    <li id="Judging">
                         <a href="#">Judging</a>
                     </li>
-                     <li>
+                     <li id="Document">
                         <a href="#">Document</a>
                     </li>
-                    <li>
+                    <li id="Human Practices">
                         <a href="#">Human Practices</a>
                     </li>
-                     <li>
+                     <li id="Notebooks">
                         <a href="#">Notebooks</a>
                     </li>
-                    <li>
+                    <li id="Team">
                         <a href="#">Team</a>
                     </li>
                 </ul>
